# perplexions

./: .gitignore  Cargo.toml  LICENSE.txt  index.html  levels.txt  notes  package-lock.json  package.json  to-test.txt  todo.txt  vite.config.ts
levels-and-words/: words.txt
public/: CNAME  levels.json  words.txt
public/levels/: 2026-06-19.txt  2026-06-20.txt  2026-06-21.txt  2026-06-22.txt  2026-06-23.txt  2026-06-24.txt  2026-06-25.txt  2026-06-26.txt  2026-06-27.txt  2026-06-28.txt  2026-07-02.txt  2026-07-05.txt  2026-07-06.txt  2026-07-11.txt  2026-07-13.txt  2026-07-14.txt  2026-07-15.txt  2026-07-16.txt  2026-07-18.txt  2026-07-23.txt  2026-07-24.txt  level-08.txt  level-12.txt  level-13.txt  level-22.txt  level-23.txt  level-25.txt  level-30.txt  level-34.txt  level-35.txt  test.txt
redirect/: README.md  index.html
scripts/: build-emoji-font.py  build-emoji-font.sh  build-share-page.js  gen-dev-hash.js  gen-favicon.sh  prepend-new-level.sh  prune-experimental.sh  prune-official.sh  split-levels.js
src/: .main.rs.swp  blessed_words.txt  constants.rs  dimensions.rs  draw.rs  game.rs  hash.test.ts  hash.ts  level.test.ts  level.ts  levels.txt  levels_eventual_order.txt  levels_experimental.txt  live_list.rs  main.rs  main.ts  render.test.ts  render.ts  solver.rs  splash.ts  style.css  theme.ts  transfer.test.ts  transfer.ts  tutorial.ts  words.rs  words.ts  words.txt
words-and-levels/: blessed_words.txt  cold-levels.txt  experimental-levels.txt  levels-cold.txt  levels-experimental.txt  levels.txt  missing.txt  words.txt
